lib/miniaudio/miniaudio.auto.c.v


// MA_API void ma_copy_and_apply_volume_factor_pcm_frames_f32(float* pPCMFramesOut, const float* pPCMFramesIn, ma_uint64 frameCount, ma_uint32 channels, float factor);
fn C.ma_copy_and_apply_volume_factor_pcm_frames_f32(p_p_c_m_frames_out &f32, p_p_c_m_frames_in &f32, frame_count u64, channels u32, factor f32)
[inline]
pub fn copy_and_apply_volume_factor_pcm_frames_f32(p_p_c_m_frames_out &f32, p_p_c_m_frames_in &f32, frame_count u64, channels u32, factor f32) {
	C.ma_copy_and_apply_volume_factor_pcm_frames_f32(p_p_c_m_frames_out, p_p_c_m_frames_in,
		frame_count, channels, factor)
}

// MA_API void ma_copy_and_apply_volume_factor_pcm_frames(void* pFramesOut, const void* pFramesIn, ma_uint64 frameCount, ma_format format, ma_uint32 channels, float factor);
fn C.ma_copy_and_apply_volume_factor_pcm_frames(p_frames_out voidptr, p_frames_in voidptr, frame_count u64, format Format, channels u32, factor f32)
[inline]
pub fn copy_and_apply_volume_factor_pcm_frames(p_frames_out voidptr, p_frames_in voidptr, frame_count u64, format Format, channels u32, factor f32) {
	C.ma_copy_and_apply_volume_factor_pcm_frames(p_frames_out, p_frames_in, frame_count,
		format, channels, factor)
}

// MA_API void ma_apply_volume_factor_pcm_frames_u8(ma_uint8* pFrames, ma_uint64 frameCount, ma_uint32 channels, float factor);
fn C.ma_apply_volume_factor_pcm_frames_u8(p_frames &C.ma_uint8, frame_count u64, channels u32, factor f32)
[inline]
pub fn apply_volume_factor_pcm_frames_u8(p_frames &C.ma_uint8, frame_count u64, channels u32, factor f32) {
	C.ma_apply_volume_factor_pcm_frames_u8(p_frames, frame_count, channels, factor)
}

// MA_API void ma_apply_volume_factor_pcm_frames_s16(ma_int16* pFrames, ma_uint64 frameCount, ma_uint32 channels, float factor);
fn C.ma_apply_volume_factor_pcm_frames_s16(p_frames &C.ma_int16, frame_count u64, channels u32, factor f32)
[inline]
pub fn apply_volume_factor_pcm_frames_s16(p_frames &C.ma_int16, frame_count u64, channels u32, factor f32) {
	C.ma_apply_volume_factor_pcm_frames_s16(p_frames, frame_count, channels, factor)
}

// MA_API void ma_apply_volume_factor_pcm_frames_s24(void* pFrames, ma_uint64 frameCount, ma_uint32 channels, float factor);
fn C.ma_apply_volume_factor_pcm_frames_s24(p_frames voidptr, frame_count u64, channels u32, factor f32)
[inline]
pub fn apply_volume_factor_pcm_frames_s24(p_frames voidptr, frame_count u64, channels u32, factor f32) {
	C.ma_apply_volume_factor_pcm_frames_s24(p_frames, frame_count, channels, factor)
}

// MA_API void ma_apply_volume_factor_pcm_frames_s32(ma_int32* pFrames, ma_uint64 frameCount, ma_uint32 channels, float factor);
fn C.ma_apply_volume_factor_pcm_frames_s32(p_frames &int, frame_count u64, channels u32, factor f32)
[inline]
pub fn apply_volume_factor_pcm_frames_s32(p_frames &int, frame_count u64, channels u32, factor f32) {
	C.ma_apply_volume_factor_pcm_frames_s32(p_frames, frame_count, channels, factor)
}

// MA_API void ma_apply_volume_factor_pcm_frames_f32(float* pFrames, ma_uint64 frameCount, ma_uint32 channels, float factor);
fn C.ma_apply_volume_factor_pcm_frames_f32(p_frames &f32, frame_count u64, channels u32, factor f32)
[inline]
pub fn apply_volume_factor_pcm_frames_f32(p_frames &f32, frame_count u64, channels u32, factor f32) {
	C.ma_apply_volume_factor_pcm_frames_f32(p_frames, frame_count, channels, factor)
}

// MA_API void ma_apply_volume_factor_pcm_frames(void* pFrames, ma_uint64 frameCount, ma_format format, ma_uint32 channels, float factor);
fn C.ma_apply_volume_factor_pcm_frames(p_frames voidptr, frame_count u64, format Format, channels u32, factor f32)
[inline]
pub fn apply_volume_factor_pcm_frames(p_frames voidptr, frame_count u64, format Format, channels u32, factor f32) {
	C.ma_apply_volume_factor_pcm_frames(p_frames, frame_count, format, channels, factor)
}

// MA_API float ma_factor_to_gain_db(float factor);
fn C.ma_factor_to_gain_db(factor f32) f32
[inline]
pub fn factor_to_gain_db(factor f32) f32 {
	return C.ma_factor_to_gain_db(factor)
}

// MA_API float ma_gain_db_to_factor(float gain);
fn C.ma_gain_db_to_factor(gain f32) f32
[inline]
pub fn gain_db_to_factor(gain f32) f32 {
	return C.ma_gain_db_to_factor(gain)
}

// MA_API ma_data_source_config ma_data_source_config_init();
fn C.ma_data_source_config_init() C.ma_data_source_config
[inline]
pub fn data_source_config_init() C.ma_data_source_config {
	return C.ma_data_source_config_init()
}

// MA_API ma_result ma_data_source_init(const ma_data_source_config* pConfig, ma_data_source* pDataSource);
fn C.ma_data_source_init(p_config &C.ma_data_source_config, p_data_source &C.ma_data_source) Result
[inline]
pub fn data_source_init(p_config &C.ma_data_source_config, p_data_source &C.ma_data_source) Result {
	return C.ma_data_source_init(p_config, p_data_source)
}

// MA_API void ma_data_source_uninit(ma_data_source* pDataSource);
fn C.ma_data_source_uninit(p_data_source &C.ma_data_source)
[inline]
pub fn data_source_uninit(p_data_source &C.ma_data_source) {
	C.ma_data_source_uninit(p_data_source)
}

// MA_API ma_result ma_data_source_read_pcm_frames(ma_data_source* pDataSource, void* pFramesOut, ma_uint64 frameCount, ma_uint64* pFramesRead, ma_bool32 loop);   /* Must support pFramesOut = NULL in which case a forward seek should be performed. */
fn C.ma_data_source_read_pcm_frames(p_data_source &C.ma_data_source, p_frames_out voidptr, frame_count u64, p_frames_read &u64, loop bool) Result
[inline]
pub fn data_source_read_pcm_frames(p_data_source &C.ma_data_source, p_frames_out voidptr, frame_count u64, p_frames_read &u64, loop bool) Result {
	return C.ma_data_source_read_pcm_frames(p_data_source, p_frames_out, frame_count,
		p_frames_read, loop)
}

// MA_API ma_result ma_data_source_seek_pcm_frames(ma_data_source* pDataSource, ma_uint64 frameCount, ma_uint64* pFramesSeeked, ma_bool32 loop); /* Can only seek forward. Equivalent to ma_data_source_read_pcm_frames(pDataSource, NULL, frameCount); */
fn C.ma_data_source_seek_pcm_frames(p_data_source &C.ma_data_source, frame_count u64, p_frames_seeked &u64, loop bool) Result
[inline]
pub fn data_source_seek_pcm_frames(p_data_source &C.ma_data_source, frame_count u64, p_frames_seeked &u64, loop bool) Result {
	return C.ma_data_source_seek_pcm_frames(p_data_source, frame_count, p_frames_seeked,
		loop)
}

// MA_API ma_result ma_data_source_seek_to_pcm_frame(ma_data_source* pDataSource, ma_uint64 frameIndex);
fn C.ma_data_source_seek_to_pcm_frame(p_data_source &C.ma_data_source, frame_index u64) Result
[inline]
pub fn data_source_seek_to_pcm_frame(p_data_source &C.ma_data_source, frame_index u64) Result {
	return C.ma_data_source_seek_to_pcm_frame(p_data_source, frame_index)
}

// MA_API ma_result ma_data_source_map(ma_data_source* pDataSource, void** ppFramesOut, ma_uint64* pFrameCount);   /* Returns MA_NOT_IMPLEMENTED if mapping is not supported. */
fn C.ma_data_source_map(p_data_source &C.ma_data_source, pp_frames_out &voidptr, p_frame_count &u64) Result
[inline]
pub fn data_source_map(p_data_source &C.ma_data_source, pp_frames_out &voidptr, p_frame_count &u64) Result {
	return C.ma_data_source_map(p_data_source, pp_frames_out, p_frame_count)
}

// MA_API ma_result ma_data_source_unmap(ma_data_source* pDataSource, ma_uint64 frameCount);       /* Returns MA_AT_END if the end has been reached. */
fn C.ma_data_source_unmap(p_data_source &C.ma_data_source, frame_count u64) Result
[inline]
pub fn data_source_unmap(p_data_source &C.ma_data_source, frame_count u64) Result {
	return C.ma_data_source_unmap(p_data_source, frame_count)
}

// MA_API ma_result ma_data_source_get_data_format(ma_data_source* pDataSource, ma_format* pFormat, ma_uint32* pChannels, ma_uint32* pSampleRate);
fn C.ma_data_source_get_data_format(p_data_source &C.ma_data_source, p_format &Format, p_channels &u32, p_sample_rate &u32) Result
[inline]
pub fn data_source_get_data_format(p_data_source &C.ma_data_source, p_format &Format, p_channels &u32, p_sample_rate &u32) Result {
	return C.ma_data_source_get_data_format(p_data_source, p_format, p_channels, p_sample_rate)
}

// MA_API ma_result ma_data_source_get_cursor_in_pcm_frames(ma_data_source* pDataSource, ma_uint64* pCursor);
fn C.ma_data_source_get_cursor_in_pcm_frames(p_data_source &C.ma_data_source, p_cursor &u64) Result
[inline]
pub fn data_source_get_cursor_in_pcm_frames(p_data_source &C.ma_data_source, p_cursor &u64) Result {
	return C.ma_data_source_get_cursor_in_pcm_frames(p_data_source, p_cursor)
}

// MA_API ma_result ma_data_source_get_length_in_pcm_frames(ma_data_source* pDataSource, ma_uint64* pLength);    /* Returns MA_NOT_IMPLEMENTED if the length is unknown or cannot be determined. Decoders can return this. */
fn C.ma_data_source_get_length_in_pcm_frames(p_data_source &C.ma_data_source, p_length &u64) Result
[inline]
pub fn data_source_get_length_in_pcm_frames(p_data_source &C.ma_data_source, p_length &u64) Result {
	return C.ma_data_source_get_length_in_pcm_frames(p_data_source, p_length)
}

// MA_API ma_result ma_audio_buffer_ref_init(ma_format format, ma_uint32 channels, const void* pData, ma_uint64 sizeInFrames, ma_audio_buffer_ref* pAudioBufferRef);
fn C.ma_audio_buffer_ref_init(format Format, channels u32, p_data voidptr, size_in_frames u64, p_audio_buffer_ref &C.ma_audio_buffer_ref) Result
[inline]
pub fn audio_buffer_ref_init(format Format, channels u32, p_data voidptr, size_in_frames u64, p_audio_buffer_ref &C.ma_audio_buffer_ref) Result {
	return C.ma_audio_buffer_ref_init(format, channels, p_data, size_in_frames, p_audio_buffer_ref)
}

// MA_API void ma_audio_buffer_ref_uninit(ma_audio_buffer_ref* pAudioBufferRef);
fn C.ma_audio_buffer_ref_uninit(p_audio_buffer_ref &C.ma_audio_buffer_ref)
[inline]
pub fn audio_buffer_ref_uninit(p_audio_buffer_ref &C.ma_audio_buffer_ref) {
	C.ma_audio_buffer_ref_uninit(p_audio_buffer_ref)
}

// MA_API ma_result ma_audio_buffer_ref_set_data(ma_audio_buffer_ref* pAudioBufferRef, const void* pData, ma_uint64 sizeInFrames);
fn C.ma_audio_buffer_ref_set_data(p_audio_buffer_ref &C.ma_audio_buffer_ref, p_data voidptr, size_in_frames u64) Result
[inline]
pub fn audio_buffer_ref_set_data(p_audio_buffer_ref &C.ma_audio_buffer_ref, p_data voidptr, size_in_frames u64) Result {
	return C.ma_audio_buffer_ref_set_data(p_audio_buffer_ref, p_data, size_in_frames)
}

// MA_API ma_uint64 ma_audio_buffer_ref_read_pcm_frames(ma_audio_buffer_ref* pAudioBufferRef, void* pFramesOut, ma_uint64 frameCount, ma_bool32 loop);
fn C.ma_audio_buffer_ref_read_pcm_frames(p_audio_buffer_ref &C.ma_audio_buffer_ref, p_frames_out voidptr, frame_count u64, loop bool) u64
[inline]
pub fn audio_buffer_ref_read_pcm_frames(p_audio_buffer_ref &C.ma_audio_buffer_ref, p_frames_out voidptr, frame_count u64, loop bool) u64 {
	return C.ma_audio_buffer_ref_read_pcm_frames(p_audio_buffer_ref, p_frames_out, frame_count,
		loop)
}

// MA_API ma_result ma_audio_buffer_ref_seek_to_pcm_frame(ma_audio_buffer_ref* pAudioBufferRef, ma_uint64 frameIndex);
fn C.ma_audio_buffer_ref_seek_to_pcm_frame(p_audio_buffer_ref &C.ma_audio_buffer_ref, frame_index u64) Result
[inline]
pub fn audio_buffer_ref_seek_to_pcm_frame(p_audio_buffer_ref &C.ma_audio_buffer_ref, frame_index u64) Result {
	return C.ma_audio_buffer_ref_seek_to_pcm_frame(p_audio_buffer_ref, frame_index)
}

// MA_API ma_result ma_audio_buffer_ref_map(ma_audio_buffer_ref* pAudioBufferRef, void** ppFramesOut, ma_uint64* pFrameCount);
fn C.ma_audio_buffer_ref_map(p_audio_buffer_ref &C.ma_audio_buffer_ref, pp_frames_out &voidptr, p_frame_count &u64) Result
[inline]
pub fn audio_buffer_ref_map(p_audio_buffer_ref &C.ma_audio_buffer_ref, pp_frames_out &voidptr, p_frame_count &u64) Result {
	return C.ma_audio_buffer_ref_map(p_audio_buffer_ref, pp_frames_out, p_frame_count)
}
